--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,7 @@
 matplotlib==3.8.2
 pandas==2.1.4
+Requests==2.31.0
 scikit_learn==1.3.2
 seaborn==0.13.0
 streamlit==1.29.0
+streamlit_lottie==0.0.5
